# cross-input-aggregation

./: README.md  half-agg-and-adaptor-sigs.md  half-aggregation.mediawiki  savings.org
hacspec-halfagg/: Cargo.toml
hacspec-halfagg/src/: halfagg.rs
hacspec-halfagg/tests/: tests.rs
slides/: 2021-Q2-halfagg-impl.org
